# ls

./: .gitignore  CMakeLists.txt  Makefile  README.md  absent_arguments.c  ft_ls  gather_file_data.c  input_parsing.c  libft.c  ls.h  main.c  myexit.c  sorting.c  test.c  tree.c  tree_balance.c  tree_print.c
includes/: ls.h
libft/: Makefile  ft_atoi.c  ft_countwords.c  ft_memalloc.c  ft_memccpy.c  ft_putnbr.c  ft_strchr.c  ft_strmapi.c  ft_strsub.c  ft_strtrim.c  libft.h
libft/ft_printf/: CMakeLists.txt  Makefile
libft/ft_printf/includes/: ft_printf.h  header_pf.h
libft/ft_printf/src/: analysis.c  create_string.c  decimal.c  float.c  float2.c  float3.c  float4.c  free.c  ft_printf.c  libfunctions.c  make_result_str.c  oct.c  parsing.c  print_color.c  printnum.c  putchar_str.c  services_itoa.c  string_char.c
src/: absent_arguments.c  gather_file_data.c  input_parsing.c  main.c  myexit.c  sorting.c  tree.c  tree_balance.c  tree_print.c
