cmake_minimum_required(VERSION 3.15)
project(ls)
set(CMAKE_C_STANDARD 99)
set(SOURCE_FILES src/input_parsing.c src/main.c src/myexit.c src/sorting.c src/tree_balance.c src/tree_print.c src/absent_arguments.c src/tree.c src/gather_file_data.c)
set(INCLUDE_FILES includes/ls.h libft/libft.h libft/ft_printf/includes/header_pf.h )
add_executable(ls ${SOURCE_FILES} ${INCLUDE_FILES})
target_link_libraries(ls /Users/gtristan/CLionProjects/ls/libft/libft.a)
target_link_libraries(ls /Users/gtristan/CLionProjects/ls/libft/ft_printf/libftprintf.a)
#target_link_libraries(ls /Users/student/CLionProjects/ls/libft/libft.a)
#target_link_libraries(ls /Users/student/CLionProjects/ls/libft/ft_printf/libftprintf.a)